<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_fluid_background_frame_vector_53876_136092"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registerTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center|left"
            android:hint="@string/registerName"
            android:inputType="text" />

        <EditText
            android:id="@+id/registerTextUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registerUsername"
            android:inputType="text" />

        <EditText
            android:id="@+id/registerTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registerEmail"
            android:inputType="text" />

        <EditText
            android:id="@+id/registerTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registerPhone"
            android:inputType="text" />

        <EditText
            android:id="@+id/registerTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registerPassword"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/registerLessor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registerLessor" />

            <CheckBox
                android:id="@+id/registerRenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registerRenter" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerCreate" />

    </LinearLayout>

</RelativeLayout>