<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signInText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlam_display"
            android:gravity="center|top"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/signInUnameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signInUname"
            android:textColor="@color/white"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/signInPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signInPassword"
            android:textColor="@color/white"
            android:inputType="text" />

        <Button
            android:id="@+id/signInbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signInButton" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/signInNoAccount" />

        <Button
            android:id="@+id/signInButtonAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signInButtonAccount" />
    </LinearLayout>
</RelativeLayout>